--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
 
     <!-- Audio elemento para música -->
     <audio id="backgroundMusic" loop>
-        <source src="https://github.com/RD7Void/RD7Void.github.io/raw/refs/heads/main/music.mp3" type="audio/mpeg">
+        <source src="https://RD7Void.github.io/music.mp3" type="audio/mpeg">
         <!-- Fallback para quando não há arquivo específico -->
     </audio>
 
